<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:id="@+id/checkbox"
    android:paddingTop="@dimen/row_text_padding"
    android:paddingBottom="@dimen/row_text_padding"
    style="@style/PaddedRow"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBox android:id="@+id/driver"
        android:drawableLeft="@drawable/driver"
        android:text="@string/driver"
        style="@style/FieldWithGlyph" />

    <CheckBox android:id="@+id/moto"
        android:drawableLeft="@drawable/moto"
        android:text="@string/moto"
        style="@style/FieldWithGlyph" />

    <CheckBox android:id="@+id/velo"
        android:drawableLeft="@drawable/velo"
        android:text="@string/velo"
        style="@style/FieldWithGlyph" />

    <CheckBox android:id="@+id/skii"
        android:drawableLeft="@drawable/skii"
        android:text="@string/skii"
        style="@style/FieldWithGlyph" />


</LinearLayout>
